Fixed spacing on checkout page

--- a/checkout.css
+++ b/checkout.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: #f5f5f5;
     max-width: calc(52rem + (2 * 1.5rem));
@@ -18,6 +22,21 @@ main {
     margin-top: 2.5rem;
 }
 
+.checkout-wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 3rem;
+}
+
+@media only screen and (max-width: 780px) {
+    .checkout-wrapper {
+        flex-direction: column;
+        justify-content: start;
+    }
+}
+
 header {
     margin-right: 5rem;
 }
@@ -25,29 +44,33 @@ header {
 @media only screen and (max-width: 780px) {
     header {
         margin-right: 0;
+        margin-bottom: 3rem;
     }
-}
-
-header > p {
-    color: #707070;
-    line-height: 1.5rem;
-    margin-right: 5rem
 }
 
 h1 {
     font-size: 2.25rem;
     line-height: 1;
     font-weight: normal;
-    margin: 0;
 }
 
-h3 {
-    margin: 0;
+header > h1 {
+    margin-bottom: 1rem;
 }
 
-.title-your-manifesto {
-    margin-bottom: 1.25rem;
+header > p {
+    color: #707070;
+    line-height: 1.5rem;
+    margin: 0 5rem 0 0;
 }
+
+@media only screen and (max-width: 780px) {
+    header > p {
+        margin: 0;
+    }
+}
+
+
 
 .total {
     display: flex;
@@ -64,7 +87,6 @@ h3 {
         align-items: flex-start;
         justify-content: space-between;
         max-width: none;
-        margin-top: 1rem;
         border-top: 1px solid #DFDFDF;
         padding-top: 1.25rem;
     }
@@ -162,22 +184,6 @@ h3 {
     margin-right: 0.5rem;
 }
 
-.checkout-wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 2.25rem;
-}
-
-@media only screen and (max-width: 780px) {
-    .checkout-wrapper {
-        flex-direction: column;
-        justify-content: start;
-    }
-}
-
-
 #manifesto-preview {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -209,8 +215,8 @@ h3 {
 .checkout-card {
     display: flex;
     background-color: white;
-    border: 1px solid #e4e4e4;
-    box-shadow: 0 2px 12px -4px rgb(0 0 0 / 6%), 0 0 4px -4px rgb(0 0 0 / 12%);
+    border: 1px solid #e7e7e7;
+    box-shadow: 0 2px 12px -4px rgb(0 0 0 / 5%), 0 0 4px -4px rgb(0 0 0 / 10%);
     padding: 1.5rem;
     border-radius: 4px;
     margin-bottom: 1rem;
@@ -223,6 +229,10 @@ h3 {
         border-left: none;
         border-right: none;
     }
+}
+
+.checkout-card * b {
+    color: #000;
 }
 
 .checkout-card-number {
@@ -238,7 +248,7 @@ h3 {
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-style: italic;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
 }
 
 .checkout-card * p {
@@ -250,6 +260,5 @@ button {
     font-size: 0.875rem;
     line-height: 1rem;
     padding: 0.25rem 0.5rem;
-    margin-top: 0.25rem;
+    margin-top: 1.75rem;
 }
-
